dark mode theme fixed for couple of rest of the pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,7 +91,13 @@ body,
 main,
 aside,
 header,
-.footer-content {
+.footer-content,
+.nav-menu-home,
+.ant-menu-horizontal,
+.ant-menu-horizontal li a,
+.category-menu-home ul,
+.category-menu-home li,
+.support-page__single {
   background-color: var(--color-background) !important;
   color: var(--color-primary) !important;
 }
@@ -101,12 +107,13 @@ aside h3 {
 /* swtich theme button */
 
 .switch {
-  position: absolute;
+  position: fixed;
   display: inline-block;
-  width: 45px;
-  height: 23px;
-  right: 10px;
-  top: 10px;
+  width: 60px;
+  height: 35px;
+  right: -10px;
+  top: calc(100vh - 52%);
+  transform: rotate(90deg);
 }
 
 .switch input {
@@ -122,7 +129,7 @@ aside h3 {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #282828;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -130,8 +137,8 @@ aside h3 {
 .slider:before {
   position: absolute;
   content: "";
-  height: 16px;
-  width: 16px;
+  height: 27px;
+  width: 27px;
   left: 4px;
   bottom: 4px;
   background-color: white;
@@ -140,7 +147,7 @@ aside h3 {
 }
 
 input:checked + .slider {
-  background-color: #33f321;
+  background-color: var(--brand-color);
 }
 
 input:focus + .slider {
@@ -150,7 +157,7 @@ input:focus + .slider {
 input:checked + .slider:before {
   -webkit-transform: translateX(20px);
   -ms-transform: translateX(20px);
-  transform: translateX(20px);
+  transform: translateX(23px);
 }
 
 .slider {
@@ -994,7 +1001,10 @@ single product page style
 /* ticket end */
 .single-product-page .single-product-meta-data .ant-col p {
   font-size: 14px;
-  color: #555;
+  color: var(--color-primary);
+}
+.single-product-page .product-data-tab {
+  color: var(--color-primary);
 }
 .single-product-page .single-product-meta-data .ant-col p:first-child {
   width: 100px;
@@ -1285,4 +1295,17 @@ h5.ant-typography {
 }
 label.ant-checkbox-wrapper > span {
   color: var(--color-primary);
+}
+
+.about-us-page p,
+.about-us-page h2,
+.faqs-page h1,
+.faqs-page p,
+.support-page h1,
+.support-page h4 {
+  color: var(--color-primary);
+}
+
+.faqs-page summary {
+  color: #333;
 }
